@@ -29,3 +29,6 @@
 - fixed: Sämtliche Videos werden NICHT angezeigt (API verändert)
 - fixed: Endlich beseitigt :-) ERROR: NEWADDON Invalid Date Format "" im LOG
 - optimized: Rubrik = sortiert nach Datum wird jetzt in einem Ordner zusammengefasst
+
+[B]Version 0.5.8  (10.08.2019)[/B] by realvito[CR]
+- added: Live + Event TV = ARTE Event 5
